Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18705

sanity-pcc test_97 panic: (pcc.c:3077:pcc_vma_file_reset()) ASSERTION( vma->vm_file->f_mapping == inode->i_mapping )

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      <ConMan> Console [dgx-06] log opened at 2025-01-19 00:00:00 UTC.
      2025-01-22 12:36:14 [594516.245688] LustreError: 396540:0:(pcc.c:3077:pcc_vma_file_reset()) ASSERTION( vma->vm_file->f_mapping == inode->i_mapping ) failed: 
      2025-01-22 12:36:14 [594516.275403] LustreError: 396540:0:(pcc.c:3077:pcc_vma_file_reset()) LBUG
      2025-01-22 12:36:16 [594517.797824] Kernel panic - not syncing: LBUG
      2025-01-22 12:36:16 [594517.802697] CPU: 155 PID: 396540 Comm: python Tainted: P           OE     5.4.0-169-generic #187-Ubuntu
      2025-01-22 12:36:16 [594517.813288] Hardware name: NVIDIA DGXA100 920-23687-2531-001/DGXA100, BIOS 1.18 10/25/2022
      2025-01-22 12:36:16 [594517.822617] Call Trace:
      2025-01-22 12:36:16 [594517.825442]  dump_stack+0x6d/0x8b
      2025-01-22 12:36:16 [594517.829241]  panic+0x114/0x2f6
      2025-01-22 12:36:16 [594517.832748]  ? __next_timer_interrupt+0xe0/0xe0
      2025-01-22 12:36:16 [594517.837910]  lbug_with_loc.cold+0x30/0x69 [libcfs]
      2025-01-22 12:36:16 [594517.843369]  pcc_mmap_io_init+0xafe/0xd60 [lustre]
      2025-01-22 12:36:16 [594517.848827]  ? vvp_io_fini+0x3f/0x780 [lustre]
      2025-01-22 12:36:16 [594517.853886]  ? recalc_sigpending+0x1c/0x60
      2025-01-22 12:36:16 [594517.858570]  pcc_fault+0x170/0x3d0 [lustre]
      2025-01-22 12:36:16 [594517.863349]  ll_fault+0x43/0x9a0 [lustre]
      2025-01-22 12:36:16 [594517.867924]  ? unlock_page_memcg+0x12/0x20
      2025-01-22 12:36:16 [594517.872880]  ? page_add_file_rmap+0xff/0x1a0
      2025-01-22 12:36:16 [594517.877943]  __do_fault+0x3c/0x170
      2025-01-22 12:36:16 [594517.882063]  do_fault+0x24b/0x640
      2025-01-22 12:36:16 [594517.886076]  __handle_mm_fault+0x4c5/0x7a0
      2025-01-22 12:36:16 [594517.890946]  handle_mm_fault+0xca/0x200
      2025-01-22 12:36:16 [594517.895567]  do_user_addr_fault+0x1f9/0x450
      2025-01-22 12:36:16 [594517.900550]  __do_page_fault+0x58/0x90
      2025-01-22 12:36:16 [594517.905044]  do_page_fault+0x2c/0xe0
      2025-01-22 12:36:16 [594517.909346]  page_fault+0x34/0x40
      2025-01-22 12:36:16 [594517.913329] RIP: 0033:0x15555305e9df
      2025-01-22 12:36:16 [594517.917640] Code: 0f 1f 84 00 00 00 00 00 0f 1f 00 41 54 55 53 83 3f 18 0f 87 6d d4 78 ff 8b 07 48 89 f5 48 89 d6 48 8d 15 ac f9 24 00 48 89 fb <48> 63 04 82 48 01 d0 ff e0 0f 1f 84 00 00 00 00 00 48 8b 45 08 48
      2025-01-22 12:36:16 [594517.939131] RSP: 002b:00007fffffffa810 EFLAGS: 00010297
      2025-01-22 12:36:16 [594517.945311] RAX: 0000000000000000 RBX: 0000000018026830 RCX: 0000000000000000
      2025-01-22 12:36:16 [594517.953650] RDX: 00001555532ae388 RSI: 00007fffffffaa90 RDI: 0000000018026830
      2025-01-22 12:36:16 [594517.961950] RBP: 00001553c1521b80 R08: 00007fffffffa8a0 R09: 00001553c1521b80
      2025-01-22 12:36:16 [594517.970248] R10: 00001553c1521b70 R11: 00001553c1521b80 R12: 0000000000000000
      2025-01-22 12:36:16 [594517.978554] R13: 00001553c1985e00 R14: 0000000000000000 R15: 0000000000000000
      2025-01-22 12:36:16 [594517.988809] Kernel Offset: 0x21600000 from 0xffffffff81000000 (relocation range: 0xffffffff80000000-0xffffffffbfffffff)
      2025-01-22 12:36:16 [594518.107525] ---[ end Kernel panic - not syncing: LBUG ]--- 

      Attachments

        Activity

          [LU-18705] sanity-pcc test_97 panic: (pcc.c:3077:pcc_vma_file_reset()) ASSERTION( vma->vm_file->f_mapping == inode->i_mapping )
          pjones Peter Jones added a comment -

          Merged for 2.17

          pjones Peter Jones added a comment - Merged for 2.17

          "Oleg Drokin <green@whamcloud.com>" merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/57999/
          Subject: LU-18705 pcc: only reset file mapping for valid cached file
          Project: fs/lustre-release
          Branch: master
          Current Patch Set:
          Commit: 194102b8319cf5d70f19f2b669f91e9b3f6ea49b

          gerrit Gerrit Updater added a comment - "Oleg Drokin <green@whamcloud.com>" merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/57999/ Subject: LU-18705 pcc: only reset file mapping for valid cached file Project: fs/lustre-release Branch: master Current Patch Set: Commit: 194102b8319cf5d70f19f2b669f91e9b3f6ea49b

          "Qian Yingjin <qian@ddn.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/57999
          Subject: LU-18705 pcc: only reset file mapping for valid cached file
          Project: fs/lustre-release
          Branch: master
          Current Patch Set: 1
          Commit: 1a00ab15e652746d02ab3382ebbf28778d532ee4

          gerrit Gerrit Updater added a comment - "Qian Yingjin <qian@ddn.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/57999 Subject: LU-18705 pcc: only reset file mapping for valid cached file Project: fs/lustre-release Branch: master Current Patch Set: 1 Commit: 1a00ab15e652746d02ab3382ebbf28778d532ee4

          People

            qian_wc Qian Yingjin
            qian_wc Qian Yingjin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: